# open-mmorpg

./: .coderabbit.yaml  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTES.md  README.md  SECURITY.md  biome.json  bunfig.toml  clippy.toml  package.json  rust-toolchain.toml  tsconfig.base.json
.claude/agents/: content.md  db.md  gameclient.md  gameengine.md  server.md  webclient.md
.claude/commands/: feature.md  (+1 more)
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md
apps/client/: Cargo.toml
apps/client/src/: main.rs
apps/gateway/: Cargo.toml
apps/gateway/src/: auth.rs  config.rs  error.rs  main.rs  ratelimit.rs  routes.rs  routing.rs  session.rs  state.rs
apps/mcp/: Cargo.toml
apps/mcp/src/: main.rs
apps/shard/: Cargo.toml
apps/shard/src/: abilities.rs  lib.rs  main.rs  replicate.rs  session.rs  tick.rs
apps/shard/tests/: ability_table.rs  connect_move_snapshot.rs
apps/worldsvc/: Cargo.toml
apps/worldsvc/src/: feed.rs  main.rs  market.rs  routes.rs  social.rs  state.rs
assets/: README.md  manifest.json
content/: .gitignore  README.md  manifest.json
crates/cache/: Cargo.toml
crates/cache/src/: lib.rs
crates/content-schema/: Cargo.toml
crates/content-schema/benches/: load-bench.rs
crates/content-schema/src/: ability.rs  class.rs  dungeon.rs  economy.rs  faction.rs  item.rs  lib.rs  loader.rs  quest.rs  race.rs  spawn.rs  stats.rs  validation.rs  zone.rs
crates/content-schema/tests/: integration_test.rs  manifest_file_test.rs
crates/ecs-core/: Cargo.toml
crates/ecs-core/src/: combat.rs  lib.rs
crates/engine-anim/: Cargo.toml
crates/engine-anim/src/: error.rs  graph.rs  ik.rs  lib.rs  lod.rs  vat.rs
crates/engine-anim/tests/: graph.rs  ik.rs  lod.rs  vat.rs
crates/engine-assets/: Cargo.toml
crates/engine-assets/src/: error.rs  gltf.rs  hot_reload.rs  lib.rs  lod.rs  manifest.rs  streaming.rs
crates/engine-assets/src/lod/: tests.rs
crates/engine-assets/src/manifest/: tests.rs
crates/engine-assets/src/streaming/: tests.rs
crates/engine-assets/tests/: hot_reload.rs  lod.rs  manifest.rs  pipeline.rs  streaming.rs
crates/engine-audio/: Cargo.toml
crates/engine-audio/src/: aoi.rs  error.rs  lib.rs  spatial.rs
crates/engine-audio/src/aoi/: tests.rs
crates/engine-audio/src/spatial/: tests.rs
crates/engine-audio/tests/: aoi.rs  audio_plugin.rs  spatial.rs
crates/engine-core/: Cargo.toml
crates/engine-core/src/: lib.rs  run.rs  schedule.rs
crates/engine-physics/: Cargo.toml
crates/engine-physics/src/: broadphase.rs  controller.rs  error.rs  lib.rs  penetration.rs  query.rs  scene.rs  shapecast.rs  shapes.rs  slide.rs
crates/engine-physics/src/broadphase/: tests.rs
crates/engine-physics/src/controller/: tests.rs
crates/engine-physics/src/penetration/: tests.rs
crates/engine-physics/src/query/: tests.rs
crates/engine-physics/src/scene/: tests.rs
crates/engine-physics/src/shapecast/: tests.rs
crates/engine-physics/src/shapes/: tests.rs
crates/engine-physics/src/slide/: tests.rs
crates/engine-physics/tests/: collision.rs  controller.rs  controller_sim.rs  los.rs  scene_queries.rs
crates/engine-render/: Cargo.toml
crates/engine-render/src/: aaa.rs  budget.rs  error.rs  lib.rs  material.rs  shadows.rs  tier.rs
crates/engine-render/src/budget/: tests.rs
crates/engine-render/src/shadows/: tests.rs
crates/engine-render/tests/: aaa.rs  budget.rs  shadows.rs  tier.rs  tier_fallback.rs
crates/engine-scene/: Cargo.toml
crates/engine-scene/src/: error.rs  lib.rs  parse.rs  prefab.rs
crates/engine-scene/src/prefab/: tests.rs
crates/engine-scene/tests/: prefab_spawn.rs  scene_roundtrip.rs
crates/engine-scene/tests/fixtures/: prefab.scn.ron
crates/engine-ui/: Cargo.toml  README.md
crates/engine-ui/src/: catalog.rs  error.rs  format.rs  hud.rs  i18n.rs  inspector.rs  lib.rs  plugin.rs  ui.rs
crates/engine-ui/src/catalog/: tests.rs
crates/engine-ui/src/format/: tests.rs
crates/engine-ui/src/hud/: tests.rs
crates/engine-ui/src/inspector/: tests.rs
crates/engine-ui/tests/: i18n.rs
crates/module-api/: Cargo.toml
crates/module-api/src/: context.rs  hooks.rs  host.rs  lib.rs  macros.rs  manifest.rs  module.rs
crates/modules/: Cargo.toml  build.rs
crates/modules/src/: lib.rs
crates/modules/tests/: generated_registry.rs
crates/netcode/: Cargo.toml
crates/netcode/proptest-regressions/: quantize.txt
crates/netcode/src/: aoi.rs  delta.rs  lib.rs  priority.rs  quantize.rs  reliability.rs  snapshot.rs
crates/netcode/src/transport/: framing.rs  loopback.rs  mod.rs
crates/netcode/tests/: transport_lossy.rs
crates/persistence/: Cargo.toml
crates/persistence/migrations/: 0001_init.sql  0002_characters.sql
crates/persistence/src/: accounts.rs  characters.rs  config.rs  error.rs  lib.rs  pool.rs
crates/persistence/tests/: db_integration.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: ids.rs  lib.rs
crates/scripting/: Cargo.toml
crates/scripting/src/: capability.rs  error.rs  lib.rs  registry.rs  wasm.rs
crates/scripting/tests/: wasm_sandbox.rs
crates/sim/: Cargo.toml
crates/sim/src/: combat.rs  hash.rs  lib.rs  movement.rs  replay.rs  schedule.rs  world.rs
crates/sim/src/combat/: tests.rs
crates/sim/tests/: replay.rs  state_hash.rs  step.rs
crates/transport/: Cargo.toml
crates/transport/src/: connection.rs  lib.rs  udp.rs
crates/transport/tests/: udp_roundtrip.rs
crates/world/: Cargo.toml
crates/world/src/: aoi.rs  geometry.rs  lib.rs  node.rs  tree.rs
crates/world/tests/: quadtree.rs
docker/: docker-compose.yml  rust.Dockerfile  web.Dockerfile  web.nginx.conf
modules/hello-world/: Cargo.toml  module.toml
modules/hello-world/src/: lib.rs
modules/milestones/: Cargo.toml  module.toml
modules/milestones/src/: lib.rs  milestone.rs
modules/milestones/tests/: hooks.rs
public/: manifest.json  sw.ts
scripts/: check-web.ts  check.ts  dev.ts  fmt.ts  generate-sitemap.ts  help.ts  new-module.ts  setup.ts  test-e2e.ts  test-setup.ts  test-web.ts  tsconfig.json  validate-content.ts
(+1112 files in other folders)
