# Open-MMORPG — Cargo workspace root.
# Rust everywhere: shared libs in crates/, deployable binaries in apps/.
# One crate = one reason to change. See docs/architecture/01-monorepo-layout.md.
[workspace]
resolver = "2"
members = [
  "crates/protocol",
  "crates/ecs-core",
  "crates/sim",
  "crates/netcode",
  "crates/persistence",
  "crates/cache",
  "crates/scripting",
  "crates/content-schema",
  "crates/errors",
  "crates/world",
  "crates/engine-core",
  "apps/gateway",
  "apps/shard",
  "apps/client",
  "apps/mcp",
  "apps/worldsvc",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/developerz-ai/open-mmorpg"
authors = ["developerz-ai"]

# Single source of truth for external versions — every member borrows from here.
[workspace.dependencies]
# internal
omm-protocol = { path = "crates/protocol" }
omm-ecs-core = { path = "crates/ecs-core" }
omm-sim = { path = "crates/sim" }
omm-netcode = { path = "crates/netcode" }
omm-persistence = { path = "crates/persistence" }
omm-cache = { path = "crates/cache" }
omm-scripting = { path = "crates/scripting" }
omm-content-schema = { path = "crates/content-schema" }
omm-errors = { path = "crates/errors" }
omm-world = { path = "crates/world" }
omm-engine-core = { path = "crates/engine-core" }
# external
# Bevy — consumed as individual sub-crates (not the umbrella `bevy`) so the
# engine ships only what it uses and boots headless with no GPU/windowing.
# The headless core needs: app lifecycle, ECS, reflection, fixed-timestep time.
bevy_app = { version = "0.19", default-features = false, features = ["bevy_reflect", "std"] }
bevy_ecs = { version = "0.19", default-features = false, features = ["bevy_reflect", "std", "multi_threaded"] }
bevy_reflect = { version = "0.19", default-features = false, features = ["std"] }
bevy_time = { version = "0.19", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "signal", "sync"] }
axum = "0.8"
# Gateway edge crypto/util: signed session tokens (HMAC-SHA256), constant-time
# MAC comparison, base64url token encoding, random nonces. Light, well-known.
hmac = "0.12"
sha2 = "0.10"
subtle = "2.6"
base64 = "0.22"
rand = "0.9"
# Tower utilities (ServiceExt::oneshot) for handler tests without a live socket.
tower = "0.5"
http-body-util = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
proptest = "1"
# Durable store: sqlx over the Postgres wire (YugabyteDB in prod, plain Postgres in dev).
# rustls (no system OpenSSL); runtime queries + compile-time-embedded migrations.
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "macros",
  "migrate",
] }
# Sandbox VM for untrusted operator content scripts. Minimal features: a
# Cranelift-compiled runtime with fuel metering — no WASI, no networking.
wasmtime = { version = "46", default-features = false, features = [
  "cranelift",
  "runtime",
  "std",
] }
# WebAssembly Text -> bytes, used only to build tiny test fixtures.
wat = "1"

# Lints applied workspace-wide. CI additionally runs `clippy -D warnings`.
# The hard rule (no unwrap/expect on the hot path) is a warn here and denied in CI,
# so tests/main can still use them where honest. See CLAUDE.md "Rust conventions".
[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
todo = "warn"

[workspace.lints.rust]
unsafe_code = "deny"

# Faster local builds; CI overrides profile as needed.
[profile.dev]
opt-level = 0
debug = 1
