[package]
name = "omm-gateway"
description = "Edge: auth, routing, session tokens, DDoS edge, public realm status (axum)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "omm-gateway"
path = "src/main.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
omm-protocol.workspace = true
omm-errors.workspace = true

[lints]
workspace = true
