[package]
name = "omm-gateway"
description = "Edge: auth, routing, session tokens, DDoS edge, public realm status (axum)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "omm-gateway"
path = "src/main.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
omm-protocol.workspace = true
omm-errors.workspace = true
thiserror.workspace = true
hmac.workspace = true
sha2.workspace = true
subtle.workspace = true
base64.workspace = true
rand.workspace = true

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
http-body-util.workspace = true
serde_json.workspace = true

[lints]
workspace = true
