[package]
name = "omm-worldsvc"
description = "Cross-shard services: chat, guild, auction house, world feed (axum)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "omm-worldsvc"
path = "src/main.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
omm-protocol.workspace = true
omm-errors.workspace = true

[lints]
workspace = true
