[package]
name = "omm-cache"
description = "Dragonfly access — ephemeral/broadcast state only. Cannot write ownership."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
omm-protocol.workspace = true

[lints]
workspace = true
