[package]
name = "omm-ecs-core"
description = "Shared ECS components + pure systems. No I/O — types and logic only."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
omm-protocol.workspace = true

[lints]
workspace = true
