[package]
name = "omm-engine-audio"
description = "Engine audio: spatial mixing math, AoI-scoped emitter selection, and the headful audio-device plugin."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Headless-safe core: app lifecycle, ECS (resources), reflection, and vector math.
# Spatial attenuation/pan and AoI selection are pure, deterministic operations —
# no platform audio API calls, so this layer links into the headless server too.
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_math.workspace = true
bevy_reflect.workspace = true
# World spatial index: reuse the quadtree for the AoI cull (one index, no drift).
omm-world.workspace = true
# Wire vector type: the quadtree keys on `omm_protocol::Vec3` positions.
omm-protocol.workspace = true
# Typed, fail-loud errors for audio-layer operations.
thiserror.workspace = true
# First-party Bevy audio device: opens a real sink. Gated by `audio` — headless
# and CI builds run without platform audio drivers.
bevy_audio = { workspace = true, optional = true }

[dev-dependencies]
bevy_math.workspace = true
omm-world.workspace = true
omm-protocol.workspace = true

[features]
default = []
# Enables the audio device plugin (`bevy_audio`): opens a platform sink for real
# playback. Off in headless/server and CI builds — the pure spatial/AoI math above
# stays available for editor/replay inspection with the feature disabled.
audio = ["dep:bevy_audio"]

[lints]
workspace = true
