[package]
name = "omm-engine-scene"
description = "Bevy scene graph, asset loading, and hierarchy management for the game engine."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bevy_app.workspace = true
bevy_asset.workspace = true
bevy_ecs.workspace = true
bevy_reflect.workspace = true
bevy_scene.workspace = true
bevy_transform.workspace = true
omm-engine-core.workspace = true
# RON + serde back `Prefab::from_ron`: the text authoring path an agent writes and
# the engine loads through the reflection registry (never a hand-written per-type
# serializer). Kept minimal — no derive machinery, just the reflect deserializer.
ron.workspace = true
serde.workspace = true
thiserror.workspace = true

[lints]
workspace = true
