[package]
name = "omm-netcode"
description = "UDP reliability primitives: sequence math, ack bitfields, interest."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
omm-protocol.workspace = true
serde.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
