[package]
name = "omm-protocol"
description = "Wire format and message types (server<->client). Single source of truth."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
omm-errors.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
