[package]
name = "omm-scripting"
description = "Sandboxed script host (WASM/Lua) + mod loading for untrusted operator content."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
omm-content-schema.workspace = true
omm-errors.workspace = true
omm-protocol.workspace = true
thiserror.workspace = true
wasmtime.workspace = true

[dev-dependencies]
omm-protocol.workspace = true
wat.workspace = true

[lints]
workspace = true
