[package]
name = "omm-sim"
description = "Deterministic game simulation — same inputs, same state (replay/anti-cheat)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
omm-ecs-core.workspace = true
omm-protocol.workspace = true
omm-errors.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
