[package]
name = "omm-transport"
description = "Real socket drivers + connection lifecycle for the netcode Transport seam."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
omm-netcode.workspace = true
omm-protocol.workspace = true
async-trait.workspace = true
tokio.workspace = true

[lints]
workspace = true
