[package]
name = "omm-world"
description = "Deterministic quadtree spatial index: interest management, streaming, and shard boundaries."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
omm-ecs-core.workspace = true
omm-protocol.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
