[package]
name = "omm-module-milestones"
description = "Compiled module: unlocks player achievement milestones from real login, level-up, zone, item-use, and chat events."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "omm_module_milestones"
path = "src/lib.rs"

[dependencies]
omm-module-api.workspace = true
tracing.workspace = true

[dev-dependencies]
# Constructing hook contexts in tests needs the typed ids they carry.
omm-protocol.workspace = true
omm-ecs-core.workspace = true

[lints]
workspace = true
